# facturias_matching

./: .dockerignore  .env.aliare.example  .env.dinner.example  .env.example  .env.sudata.example  .gitignore  Dockerfile  README.md  app.py  back_check.py  cloudbuild.yaml  compare_padron_views.py  config.py  consultar_odoo_catalog.py  deploy.sh  deploy_aliare.sh  main.py  odoo_api.py  odoo_catalog.py  odoo_import.py  package.json  padron_proveedores_diff.py  padron_taxes.py  purchase_matching.py  pyproject.toml  test_fac_amounts.py  test_odoo_catalog.py  test_odoo_import.py  test_padron_process.py  test_purchase_matching.py
css/: styles.css
docs/: README.md  api.md  arquitectura.md  guia-usuario.md  iva-y-import-odoo.md  modulos-frontend.md  modulos-python.md  tests-y-scripts.md
html/: index.html
js/: api.js  app.js  combobox.js  dom.js  main.js  rows.js  singleLine.js  state.js  table.js  utils.js  validation.js
scripts/: build_padron_from_odoo.py  compare_padron_views.py  consultar_odoo_catalog.py  padron_proveedores_diff.py  seed_aliare_proveedores.py  seed_aliare_rubros.py
tests/: tax_fixtures.py  test_catalog_partners.py  test_comprobante_tax.py  test_db_resolve.py  test_empresa_odoo_profile.py  test_fac_amounts.py  test_infra_db_resolve.py  test_iva_tax_resolve.py  test_js_python_parity.py  test_odoo_api.py  test_odoo_catalog.py  test_odoo_import.py  test_options_otros_impuestos.py  test_padron_taxes_iibb.py  test_process_conversions.py  test_purchase_matching.py  test_routes_odoo_cloud.py  test_rubro_profile.py  test_saved_row_remap.py  (+1 more)
(+149 files in other folders)
